language/move-lang/tests/move_check/parser/hexstring_token_eof2.exp
error[E01008]: invalid hex string
  ┌─ tests/move_check/parser/hexstring_token_eof2.move:3:9
  │
3 │         x"abcd
  │         ^^^^^^ Missing closing quote (") after byte string

